increase contrast for preprocessing, and simplified imports

--- a/crk/dmgCheck.ipynb
+++ b/crk/dmgCheck.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 2,
    "id": "43305036-47b0-4e03-a774-e0b76f00b6e3",
    "metadata": {},
    "outputs": [],
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 3,
    "id": "e9d4a3dd-489d-46d6-a3aa-0d5b07fb61c0",
    "metadata": {},
    "outputs": [],
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 4,
    "id": "69cfb7fc-bc1b-44a3-85da-a330a9248aac",
    "metadata": {},
    "outputs": [],
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 7,
    "id": "bab4f5fb-99d1-4165-810f-5f4c19fb8951",
    "metadata": {},
    "outputs": [
@@ -122,7 +122,9 @@
     "        \n",
     "        # Extract damage \n",
     "        damage = re.search(r'Total Damage: (\\d{1,3}(,\\d{3})*)', text).group(1)\n",
-    "        \n",
+    "        # Remove commas and convert to integer\n",
+    "        damage = int(damage.replace(\",\", \"\"))\n",
+    "\n",
     "        # Extract boss name\n",
     "        boss = re.search(r'(Living Abyss|Red Velvet Dragon|Avatar of Destiny)', text).group(1)\n",
     "        \n",
@@ -147,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 8,
    "id": "c0a7f4bc-b679-49e1-807e-f1e18ea280f1",
    "metadata": {},
    "outputs": [
@@ -183,49 +185,49 @@
        "      <th>0</th>\n",
        "      <td>valertine</td>\n",
        "      <td>Living Abyss</td>\n",
-       "      <td>246,340,361</td>\n",
+       "      <td>246340361</td>\n",
        "      <td>2023-07-13</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>valertine</td>\n",
        "      <td>Red Velvet Dragon</td>\n",
-       "      <td>313,649,929</td>\n",
+       "      <td>313649929</td>\n",
        "      <td>2023-07-13</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>hachi</td>\n",
        "      <td>Living Abyss</td>\n",
-       "      <td>311,758,542</td>\n",
+       "      <td>311758542</td>\n",
        "      <td>2023-07-13</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>hachi</td>\n",
        "      <td>Red Velvet Dragon</td>\n",
-       "      <td>352,638,865</td>\n",
+       "      <td>352638865</td>\n",
        "      <td>2023-07-13</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>r2miss</td>\n",
        "      <td>Living Abyss</td>\n",
-       "      <td>301,591,756</td>\n",
+       "      <td>301591756</td>\n",
        "      <td>2023-07-13</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
        "      <td>r2miss</td>\n",
        "      <td>Red Velvet Dragon</td>\n",
-       "      <td>380,257,878</td>\n",
+       "      <td>380257878</td>\n",
        "      <td>2023-07-13</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6</th>\n",
        "      <td>r2miss</td>\n",
        "      <td>Avatar of Destiny</td>\n",
-       "      <td>64,616,570</td>\n",
+       "      <td>64616570</td>\n",
        "      <td>2023-07-13</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -233,17 +235,17 @@
        "</div>"
       ],
       "text/plain": [
-       "         IGN               Boss       Damage        Date\n",
-       "0  valertine       Living Abyss  246,340,361  2023-07-13\n",
-       "1  valertine  Red Velvet Dragon  313,649,929  2023-07-13\n",
-       "2      hachi       Living Abyss  311,758,542  2023-07-13\n",
-       "3      hachi  Red Velvet Dragon  352,638,865  2023-07-13\n",
-       "4     r2miss       Living Abyss  301,591,756  2023-07-13\n",
-       "5     r2miss  Red Velvet Dragon  380,257,878  2023-07-13\n",
-       "6     r2miss  Avatar of Destiny   64,616,570  2023-07-13"
+       "         IGN               Boss     Damage        Date\n",
+       "0  valertine       Living Abyss  246340361  2023-07-13\n",
+       "1  valertine  Red Velvet Dragon  313649929  2023-07-13\n",
+       "2      hachi       Living Abyss  311758542  2023-07-13\n",
+       "3      hachi  Red Velvet Dragon  352638865  2023-07-13\n",
+       "4     r2miss       Living Abyss  301591756  2023-07-13\n",
+       "5     r2miss  Red Velvet Dragon  380257878  2023-07-13\n",
+       "6     r2miss  Avatar of Destiny   64616570  2023-07-13"
       ]
      },
-     "execution_count": 83,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
