--- a/crk/relicDonation.ipynb
+++ b/crk/relicDonation.ipynb
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 3,
    "id": "1d8775a3-7d78-4576-8ff1-ecf420afd264",
    "metadata": {},
    "outputs": [],
@@ -85,7 +85,7 @@
     "# Set of allowed image formats\n",
     "IMAGE_FORMATS = {'png', 'jpg', 'jpeg'} \n",
     "\n",
-    "def ocr_image(image_path, kernel_size=1, contrast_factor=30):\n",
+    "def ocr_image(image_path, kernel_size=1, contrast_factor=2):\n",
     "\n",
     "    # Validate image file\n",
     "    ext = os.path.splitext(image_path)[1].lower()\n",
@@ -112,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 4,
    "id": "ab6e15b4-b8a4-4f39-a745-4e244f9b7a05",
    "metadata": {},
    "outputs": [],
@@ -122,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "1f50812f-1690-4b02-9db7-ed53561adc93",
    "metadata": {},
    "outputs": [],
@@ -142,10 +142,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "2029c733-f780-41e6-903e-1ecc29a2c09e",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Verified 30 images in slice/\n"
+     ]
+    }
+   ],
    "source": [
     "# Get list of files in folder\n",
     "files = os.listdir(folder) \n",
@@ -162,17 +170,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "id": "3000bf33-cce8-4ce4-8c00-540d308abff2",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'107,200\\n'"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "ocr_image('slice/segment_82.jpg')"
+    "test = ocr_image('slice/segment_.jpg')\n",
+    "\n",
+    "test"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "id": "e0a08f40-0457-4e5a-b1fd-5329bc7837c0",
    "metadata": {},
    "outputs": [],
@@ -193,9 +214,11 @@
     "    text = ocr_image(image_path)\n",
     "    \n",
     "    username = re.search(r'([\\w]+)(?=\\n)', text).group(1)\n",
-    "    points = int(re.search(r'(\\d+)\\n*$', text).group(1))\n",
+    "    # Get last number\n",
+    "    points = text.split(\" \")[-1]\n",
+    "    # Remove non-digits\n",
+    "    points = int(re.sub(r'[^\\d]', '', points))\n",
     "    date = datetime.fromtimestamp(os.path.getmtime(image_path)).date()\n",
-    "\n",
     "\n",
     "    # Create new row\n",
     "    new_row = {\n",
@@ -213,10 +236,291 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "id": "6e1093b0-5c41-4541-bd01-c9ff726874e1",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>IGN</th>\n",
+       "      <th>Relic Donation Points</th>\n",
+       "      <th>Date</th>\n",
+       "      <th>File</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>3</td>\n",
+       "      <td>45700</td>\n",
+       "      <td>2023-07-13</td>\n",
+       "      <td>slice/segment_82.jpg</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Karou8</td>\n",
+       "      <td>145100</td>\n",
+       "      <td>2023-07-13</td>\n",
+       "      <td>slice/segment_41.jpg</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>VibingFlash</td>\n",
+       "      <td>83300</td>\n",
+       "      <td>2023-07-13</td>\n",
+       "      <td>slice/segment_69.jpg</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>MelonBunii</td>\n",
+       "      <td>107200</td>\n",
+       "      <td>2023-07-13</td>\n",
+       "      <td>slice/segment_54.jpg</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Nickknack</td>\n",
+       "      <td>141700</td>\n",
+       "      <td>2023-07-13</td>\n",
+       "      <td>slice/segment_56.jpg</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>xChocobo</td>\n",
+       "      <td>19300</td>\n",
+       "      <td>2023-07-13</td>\n",
+       "      <td>slice/segment_90.jpg</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>darkvioletfox</td>\n",
+       "      <td>46800</td>\n",
+       "      <td>2023-07-13</td>\n",
+       "      <td>slice/segment_84.jpg</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>Glutenburgh</td>\n",
+       "      <td>133300</td>\n",
+       "      <td>2023-07-13</td>\n",
+       "      <td>slice/segment_52.jpg</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>MarinKitagawa</td>\n",
+       "      <td>104900</td>\n",
+       "      <td>2023-07-13</td>\n",
+       "      <td>slice/segment_50.jpg</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>Minty24</td>\n",
+       "      <td>24000</td>\n",
+       "      <td>2023-07-13</td>\n",
+       "      <td>slice/segment_86.jpg</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>Adriik</td>\n",
+       "      <td>238900</td>\n",
+       "      <td>2023-07-13</td>\n",
+       "      <td>slice/segment_9.jpg</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>Itrimble3</td>\n",
+       "      <td>324800</td>\n",
+       "      <td>2023-07-13</td>\n",
+       "      <td>slice/segment_37.jpg</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>SAIKASAN</td>\n",
+       "      <td>259600</td>\n",
+       "      <td>2023-07-13</td>\n",
+       "      <td>slice/segment_23.jpg</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>JuicyII1</td>\n",
+       "      <td>163800</td>\n",
+       "      <td>2023-07-13</td>\n",
+       "      <td>slice/segment_35.jpg</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>Portallifesource</td>\n",
+       "      <td>254300</td>\n",
+       "      <td>2023-07-13</td>\n",
+       "      <td>slice/segment_21.jpg</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15</th>\n",
+       "      <td>BigBoyChaddy</td>\n",
+       "      <td>199600</td>\n",
+       "      <td>2023-07-13</td>\n",
+       "      <td>slice/segment_25.jpg</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16</th>\n",
+       "      <td>Mochixisland</td>\n",
+       "      <td>200300</td>\n",
+       "      <td>2023-07-13</td>\n",
+       "      <td>slice/segment_19.jpg</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17</th>\n",
+       "      <td>Steveth</td>\n",
+       "      <td>218100</td>\n",
+       "      <td>2023-07-13</td>\n",
+       "      <td>slice/segment_33.jpg</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18</th>\n",
+       "      <td>RougeAether</td>\n",
+       "      <td>172400</td>\n",
+       "      <td>2023-07-13</td>\n",
+       "      <td>slice/segment_17.jpg</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>19</th>\n",
+       "      <td>Crumfon</td>\n",
+       "      <td>602900</td>\n",
+       "      <td>2023-07-13</td>\n",
+       "      <td>slice/segment_1.jpg</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>20</th>\n",
+       "      <td>Gingerdoodles</td>\n",
+       "      <td>430500</td>\n",
+       "      <td>2023-07-13</td>\n",
+       "      <td>slice/segment_3.jpg</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>21</th>\n",
+       "      <td>r2miss</td>\n",
+       "      <td>140700</td>\n",
+       "      <td>2023-07-13</td>\n",
+       "      <td>slice/segment_39.jpg</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>22</th>\n",
+       "      <td>Windsweep</td>\n",
+       "      <td>291400</td>\n",
+       "      <td>2023-07-13</td>\n",
+       "      <td>slice/segment_7.jpg</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>23</th>\n",
+       "      <td>Acebites</td>\n",
+       "      <td>358900</td>\n",
+       "      <td>2023-07-13</td>\n",
+       "      <td>slice/segment_5.jpg</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>24</th>\n",
+       "      <td>ijoool</td>\n",
+       "      <td>17600</td>\n",
+       "      <td>2023-07-13</td>\n",
+       "      <td>slice/segment_88.jpg</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25</th>\n",
+       "      <td>valertine</td>\n",
+       "      <td>152000</td>\n",
+       "      <td>2023-07-13</td>\n",
+       "      <td>slice/segment_67.jpg</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>26</th>\n",
+       "      <td>SALTMAMA</td>\n",
+       "      <td>71900</td>\n",
+       "      <td>2023-07-13</td>\n",
+       "      <td>slice/segment_73.jpg</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>27</th>\n",
+       "      <td>mangozic</td>\n",
+       "      <td>129400</td>\n",
+       "      <td>2023-07-13</td>\n",
+       "      <td>slice/segment_65.jpg</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>28</th>\n",
+       "      <td>Zane0930</td>\n",
+       "      <td>59900</td>\n",
+       "      <td>2023-07-13</td>\n",
+       "      <td>slice/segment_71.jpg</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>29</th>\n",
+       "      <td>ChocoChipDinie</td>\n",
+       "      <td>112400</td>\n",
+       "      <td>2023-07-13</td>\n",
+       "      <td>slice/segment_58.jpg</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                 IGN Relic Donation Points        Date                  File\n",
+       "0                  3                 45700  2023-07-13  slice/segment_82.jpg\n",
+       "1             Karou8                145100  2023-07-13  slice/segment_41.jpg\n",
+       "2        VibingFlash                 83300  2023-07-13  slice/segment_69.jpg\n",
+       "3         MelonBunii                107200  2023-07-13  slice/segment_54.jpg\n",
+       "4          Nickknack                141700  2023-07-13  slice/segment_56.jpg\n",
+       "5           xChocobo                 19300  2023-07-13  slice/segment_90.jpg\n",
+       "6      darkvioletfox                 46800  2023-07-13  slice/segment_84.jpg\n",
+       "7        Glutenburgh                133300  2023-07-13  slice/segment_52.jpg\n",
+       "8      MarinKitagawa                104900  2023-07-13  slice/segment_50.jpg\n",
+       "9            Minty24                 24000  2023-07-13  slice/segment_86.jpg\n",
+       "10            Adriik                238900  2023-07-13   slice/segment_9.jpg\n",
+       "11         Itrimble3                324800  2023-07-13  slice/segment_37.jpg\n",
+       "12          SAIKASAN                259600  2023-07-13  slice/segment_23.jpg\n",
+       "13          JuicyII1                163800  2023-07-13  slice/segment_35.jpg\n",
+       "14  Portallifesource                254300  2023-07-13  slice/segment_21.jpg\n",
+       "15      BigBoyChaddy                199600  2023-07-13  slice/segment_25.jpg\n",
+       "16      Mochixisland                200300  2023-07-13  slice/segment_19.jpg\n",
+       "17           Steveth                218100  2023-07-13  slice/segment_33.jpg\n",
+       "18       RougeAether                172400  2023-07-13  slice/segment_17.jpg\n",
+       "19           Crumfon                602900  2023-07-13   slice/segment_1.jpg\n",
+       "20     Gingerdoodles                430500  2023-07-13   slice/segment_3.jpg\n",
+       "21            r2miss                140700  2023-07-13  slice/segment_39.jpg\n",
+       "22         Windsweep                291400  2023-07-13   slice/segment_7.jpg\n",
+       "23          Acebites                358900  2023-07-13   slice/segment_5.jpg\n",
+       "24            ijoool                 17600  2023-07-13  slice/segment_88.jpg\n",
+       "25         valertine                152000  2023-07-13  slice/segment_67.jpg\n",
+       "26          SALTMAMA                 71900  2023-07-13  slice/segment_73.jpg\n",
+       "27          mangozic                129400  2023-07-13  slice/segment_65.jpg\n",
+       "28          Zane0930                 59900  2023-07-13  slice/segment_71.jpg\n",
+       "29    ChocoChipDinie                112400  2023-07-13  slice/segment_58.jpg"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "df"
    ]
