--- a/crk/relicDonation.ipynb
+++ b/crk/relicDonation.ipynb
@@ -2,22 +2,10 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "499e761a-6ef5-4463-b9af-3d32c99732fe",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "ValueError",
-     "evalue": "invalid literal for int() with base 10: ''",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[0;32m/tmp/ipykernel_8845/2273227861.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m    110\u001b[0m     \u001b[0mpoints\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtext\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msplit\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\" \"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    111\u001b[0m     \u001b[0;31m# Remove non-digits\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 112\u001b[0;31m     \u001b[0mpoints\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mre\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msub\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34mr'[^\\d]'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m''\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mpoints\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    113\u001b[0m     \u001b[0mdate\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mdatetime\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfromtimestamp\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mos\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpath\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mgetmtime\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mimage_path\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdate\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    114\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mValueError\u001b[0m: invalid literal for int() with base 10: ''"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from PIL import Image, ImageFilter, ImageEnhance\n",
     "import cv2\n",
@@ -108,6 +96,10 @@
     "folder = 'relicDonations/'\n",
     "\n",
     "for filename in os.listdir(folder):\n",
+    "    # Check file extension\n",
+    "    ext = os.path.splitext(filename)[1].lower()\n",
+    "    if ext not in ['.jpg', '.jpeg', '.png']:\n",
+    "        continue\n",
     "    image_path = os.path.join(folder, filename)\n",
     "\n",
     "    text = ocr_image(image_path)\n",
@@ -120,41 +112,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "c6b19398-368a-4b03-94d4-fc9eb956f624",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Processing relicDonations/segment_41.jpg\n",
-      "Processing relicDonations/segment_54.jpg\n",
-      "Processing relicDonations/segment_81.jpg\n",
-      "Processing relicDonations/segment_56.jpg\n",
-      "Processing relicDonations/segment_43.jpg\n",
-      "Processing relicDonations/segment_47.jpg\n",
-      "Processing relicDonations/segment_51.jpg\n",
-      "Processing relicDonations/segment_45.jpg\n",
-      "Processing relicDonations/segment_22.jpg\n",
-      "Processing relicDonations/segment_9.jpg\n",
-      "Processing relicDonations/segment_37.jpg\n",
-      "Processing relicDonations/segment_20.jpg\n",
-      "Processing relicDonations/segment_30.jpg\n",
-      "Processing relicDonations/segment_33.jpg\n",
-      "Processing relicDonations/segment_26.jpg\n",
-      "Processing relicDonations/segment_28.jpg\n",
-      "Processing relicDonations/segment_3.jpg\n",
-      "Processing relicDonations/segment_7.jpg\n",
-      "Processing relicDonations/segment_12.jpg\n",
-      "Processing relicDonations/segment_5.jpg\n",
-      "Processing relicDonations/segment_60.jpg\n",
-      "Processing relicDonations/segment_77.jpg\n",
-      "Processing relicDonations/segment_67.jpg\n",
-      "Processing relicDonations/segment_71.jpg\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Loop through images\n",
     "for filename in sorted(os.listdir(folder)):\n",
@@ -171,7 +132,7 @@
     "    # Extract data from image\n",
     "    text = ocr_image(image_path)\n",
     "    \n",
-    "    username = re.search(r'([\\w]+)(?=\\n)', text).group(1)\n",
+    "    username = re.search(r'\\n(.+)(?=\\n)', text).group(1)\n",
     "    \n",
     "    # Get last number\n",
     "    points = text.split(\" \")[-1]\n",
@@ -198,295 +159,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "id": "6e908c60-4fff-4358-bfd5-2797fdfaf385",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'@ Boss Vanquisher\\nSteveth\\n\\nf Master 2\\nWISTERIA\\n\\nRelic Donation\\nPoints\\n\\nEAperatots\\noints\\n405 243,600\\n'"
-      ]
-     },
-     "execution_count": 13,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Troubleshooting\n",
     "text = ocr_image('relicDonations/segment_41.jpg')\n",
     "\n",
-    "#username = re.search(r'([\\w]+)(?=\\n)', text).group(1)\n",
-    "#print(username)\n",
+    "username = re.search(r'\\n(.+)(?=\\n)', text).group(1)\n",
+    "username"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "763ac371-3dc3-4669-bfd7-7df24ca145db",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "text = ocr_image('relicDonations/segment_81.jpg')\n",
     "text"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "f2c6f86a-d177-40d5-8561-d7ced2a15e5f",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>IGN</th>\n",
-       "      <th>Relic Donation Points</th>\n",
-       "      <th>Date</th>\n",
-       "      <th>File</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>Vanquisher</td>\n",
-       "      <td>243600</td>\n",
-       "      <td>2023-07-25</td>\n",
-       "      <td>relicDonations/segment_41.jpg</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>Boi</td>\n",
-       "      <td>33800</td>\n",
-       "      <td>2023-07-25</td>\n",
-       "      <td>relicDonations/segment_54.jpg</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>xChocobo</td>\n",
-       "      <td>19300</td>\n",
-       "      <td>2023-07-13</td>\n",
-       "      <td>relicDonations/segment_81.jpg</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>Angel</td>\n",
-       "      <td>143800</td>\n",
-       "      <td>2023-07-25</td>\n",
-       "      <td>relicDonations/segment_56.jpg</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>Grandmaster</td>\n",
-       "      <td>92500</td>\n",
-       "      <td>2023-07-25</td>\n",
-       "      <td>relicDonations/segment_43.jpg</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>Cloudbuster</td>\n",
-       "      <td>18200</td>\n",
-       "      <td>2023-07-25</td>\n",
-       "      <td>relicDonations/segment_47.jpg</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>Timekeeper</td>\n",
-       "      <td>63500</td>\n",
-       "      <td>2023-07-25</td>\n",
-       "      <td>relicDonations/segment_51.jpg</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>500</td>\n",
-       "      <td>308700</td>\n",
-       "      <td>2023-07-25</td>\n",
-       "      <td>relicDonations/segment_45.jpg</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>Friend</td>\n",
-       "      <td>110800</td>\n",
-       "      <td>2023-07-25</td>\n",
-       "      <td>relicDonations/segment_22.jpg</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td>Overlord</td>\n",
-       "      <td>447900</td>\n",
-       "      <td>2023-07-25</td>\n",
-       "      <td>relicDonations/segment_9.jpg</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>10</th>\n",
-       "      <td>Timekeeper</td>\n",
-       "      <td>274100</td>\n",
-       "      <td>2023-07-25</td>\n",
-       "      <td>relicDonations/segment_37.jpg</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>11</th>\n",
-       "      <td>Boi</td>\n",
-       "      <td>117500</td>\n",
-       "      <td>2023-07-25</td>\n",
-       "      <td>relicDonations/segment_20.jpg</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>12</th>\n",
-       "      <td>Grandmaster</td>\n",
-       "      <td>150600</td>\n",
-       "      <td>2023-07-25</td>\n",
-       "      <td>relicDonations/segment_30.jpg</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>13</th>\n",
-       "      <td>Guardian</td>\n",
-       "      <td>279300</td>\n",
-       "      <td>2023-07-25</td>\n",
-       "      <td>relicDonations/segment_33.jpg</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>14</th>\n",
-       "      <td>Overlord</td>\n",
-       "      <td>213200</td>\n",
-       "      <td>2023-07-25</td>\n",
-       "      <td>relicDonations/segment_26.jpg</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>15</th>\n",
-       "      <td>1</td>\n",
-       "      <td>48300</td>\n",
-       "      <td>2023-07-25</td>\n",
-       "      <td>relicDonations/segment_28.jpg</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>16</th>\n",
-       "      <td>Grandmaster</td>\n",
-       "      <td>219000</td>\n",
-       "      <td>2023-07-25</td>\n",
-       "      <td>relicDonations/segment_3.jpg</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>17</th>\n",
-       "      <td>Starlight</td>\n",
-       "      <td>623900</td>\n",
-       "      <td>2023-07-25</td>\n",
-       "      <td>relicDonations/segment_7.jpg</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>18</th>\n",
-       "      <td>Star</td>\n",
-       "      <td>150300</td>\n",
-       "      <td>2023-07-25</td>\n",
-       "      <td>relicDonations/segment_12.jpg</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>19</th>\n",
-       "      <td>Favorite</td>\n",
-       "      <td>123800</td>\n",
-       "      <td>2023-07-25</td>\n",
-       "      <td>relicDonations/segment_5.jpg</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>20</th>\n",
-       "      <td>Champion</td>\n",
-       "      <td>155400</td>\n",
-       "      <td>2023-07-25</td>\n",
-       "      <td>relicDonations/segment_60.jpg</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>21</th>\n",
-       "      <td>Minty24</td>\n",
-       "      <td>24000</td>\n",
-       "      <td>2023-07-13</td>\n",
-       "      <td>relicDonations/segment_77.jpg</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>22</th>\n",
-       "      <td>SALTMAMA</td>\n",
-       "      <td>71900</td>\n",
-       "      <td>2023-07-13</td>\n",
-       "      <td>relicDonations/segment_67.jpg</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>23</th>\n",
-       "      <td>darkvioletfox</td>\n",
-       "      <td>46800</td>\n",
-       "      <td>2023-07-13</td>\n",
-       "      <td>relicDonations/segment_71.jpg</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "              IGN Relic Donation Points        Date  \\\n",
-       "0      Vanquisher                243600  2023-07-25   \n",
-       "1             Boi                 33800  2023-07-25   \n",
-       "2        xChocobo                 19300  2023-07-13   \n",
-       "3           Angel                143800  2023-07-25   \n",
-       "4     Grandmaster                 92500  2023-07-25   \n",
-       "5     Cloudbuster                 18200  2023-07-25   \n",
-       "6      Timekeeper                 63500  2023-07-25   \n",
-       "7             500                308700  2023-07-25   \n",
-       "8          Friend                110800  2023-07-25   \n",
-       "9        Overlord                447900  2023-07-25   \n",
-       "10     Timekeeper                274100  2023-07-25   \n",
-       "11            Boi                117500  2023-07-25   \n",
-       "12    Grandmaster                150600  2023-07-25   \n",
-       "13       Guardian                279300  2023-07-25   \n",
-       "14       Overlord                213200  2023-07-25   \n",
-       "15              1                 48300  2023-07-25   \n",
-       "16    Grandmaster                219000  2023-07-25   \n",
-       "17      Starlight                623900  2023-07-25   \n",
-       "18           Star                150300  2023-07-25   \n",
-       "19       Favorite                123800  2023-07-25   \n",
-       "20       Champion                155400  2023-07-25   \n",
-       "21        Minty24                 24000  2023-07-13   \n",
-       "22       SALTMAMA                 71900  2023-07-13   \n",
-       "23  darkvioletfox                 46800  2023-07-13   \n",
-       "\n",
-       "                             File  \n",
-       "0   relicDonations/segment_41.jpg  \n",
-       "1   relicDonations/segment_54.jpg  \n",
-       "2   relicDonations/segment_81.jpg  \n",
-       "3   relicDonations/segment_56.jpg  \n",
-       "4   relicDonations/segment_43.jpg  \n",
-       "5   relicDonations/segment_47.jpg  \n",
-       "6   relicDonations/segment_51.jpg  \n",
-       "7   relicDonations/segment_45.jpg  \n",
-       "8   relicDonations/segment_22.jpg  \n",
-       "9    relicDonations/segment_9.jpg  \n",
-       "10  relicDonations/segment_37.jpg  \n",
-       "11  relicDonations/segment_20.jpg  \n",
-       "12  relicDonations/segment_30.jpg  \n",
-       "13  relicDonations/segment_33.jpg  \n",
-       "14  relicDonations/segment_26.jpg  \n",
-       "15  relicDonations/segment_28.jpg  \n",
-       "16   relicDonations/segment_3.jpg  \n",
-       "17   relicDonations/segment_7.jpg  \n",
-       "18  relicDonations/segment_12.jpg  \n",
-       "19   relicDonations/segment_5.jpg  \n",
-       "20  relicDonations/segment_60.jpg  \n",
-       "21  relicDonations/segment_77.jpg  \n",
-       "22  relicDonations/segment_67.jpg  \n",
-       "23  relicDonations/segment_71.jpg  "
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "df"
    ]
